# aura

./: README.md  pyproject.toml
src/aura/: __init__.py  availability.py  config.py  core.py  radar.py  volume.py
tests/: test_aura.py
